app/globals.css
/* @tailwind base; */
@tailwind components;
@tailwind utilities;

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

/* Keyframes for gradient animation */

h1,h2,h3,h4,h5,h6,p,span {
  margin: 0;
}

body {
  background: #3494E6;
  /* fallback for old browsers */
  background: -webkit-radial-gradient(#EC6EAD, #3494E6);
  /* Chrome 10-25, Safari 5.1-6 */
  background: linear-radial(#EC6EAD, #3494E6);
  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
  background-size: 150% 150%;
  background-position: 0% 75%;
  width: 100%;
  max-width: 100%;
  padding: 0;
  margin: 0;
  height: 100dvh;
  scroll-snap-type: y mandatory;
  scroll-behavior: auto;
  overflow-y: auto;
}

main {
  flex-grow: 1;
  overflow-y: auto;
  overflow-x: hidden;
  width: 100vw;
  z-index: 0;
  /* height: 100%; */
  position: relative;
  scroll-snap-type: y mandatory;
  scroll-behavior: auto;
}

.app-ctn {
  position: relative;
  flex-grow: 1;
  min-height: 100dvh;
  max-height: fit-content;
  width: 100%;
  margin: 0;
  display: flex;
  flex-direction: column;
  padding-inline: 6vw;
  padding-block: 10vh 2.5vh;
  justify-content: space-between;
  overflow-y: hidden;
  overflow-x: hidden;
  /* background-color: black; */
  /* z-index: 5; */
  pointer-events: all;
  scroll-snap-align: start;

  @media screen and (min-width:769px) {
    text-align: center;
  }

  @media screen and (min-width:769px) and (max-width:1024px) {
    padding-inline: 6vw;
    padding-block: 10vh;
  }

  @media screen and (min-width:1025px) {
    padding-block: 10vh;
  }
}


.hero-wrapper {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.scroll-ctn-wrapper {
  position: absolute;
  left: 0;
  width: 100%;
  /* min-height: 100%; */
  display: flex;
}


.card-wrapper {
  width: 100%;
  height: max-content;
  display: flex;
  flex-direction: column;
  gap: 2vh;
  padding: 2vh;
  border-radius: 25px;
  width: 100%;
  justify-content: center;
  align-items: center;
  height: 100%;
  box-shadow: 2px 2px 5px #0a0a0a8d;

  @media screen and (min-width:769px) {
    width: 75vw;
  }

  @media screen and (min-width:1025px) {
    width: 33vw;
  }
}

.btm-hero-ctn-wrapper {
  z-index: 1;
  color: #b1b1b1;
}

.header-wrapper {
  text-align: left;
}
.snap-x-wrapper {
  height: 100%;
  padding-block:5vh;
  padding-inline: 6vw;
  min-width: 100%;
  display: flex;
  scroll-snap-type: x mandatory;
  scroll-snap-align: center;
  scroll-behavior: smooth;
  @media screen and (min-width:769px) {
    padding-inline: 0;
  }
  @media screen and (min-width:1033px) {
    margin-right: 16.5vw;
    min-width: fit-content;
  }
}
.snap-x-wrapper#category-card {
  @media screen and (min-width:1033px) {
    width: 25vw;
    margin-right: 16.5vw;
    /* min-width: fit-content; */
  }
}

div.snap-x-wrapper#programmer-approach-solid-hero {
  min-width: 100%;
  padding-inline: 6vw;
  display: flex;
  gap: 6vw;

  justify-content: center;

  /* align-items: center; */
  @media screen and (min-width:1025px) {
    width: fit-content;
      padding-inline: 6vw;
  }
}
.subheader-text {
  font-weight: bold;
}

.btn-ctn {
  height: 100%;
  display: flex;
  flex-direction: row;
  gap: 3vw;
  z-index: 100;
  justify-content: center;
  position: relative;
  align-items: center;

  /* bottom: 10vh; */
  @media screen and (min-width:769px) {
    justify-content: center;
  }
}

.btn-ctn#case-studies{
  overflow-x: auto;
  width: 100%;
  padding-inline: 6vw;
}


.posts-ctn {
  min-height: min-content;
  width: 100%;
  flex-grow: 1;
}

.posts-ctn#blog-home{
    height: 60vh;
}

.btn-pro-wrapper {
  backdrop-filter: blur(5px);
  background-color: #f5f5f517;
  border-radius: 50px;
  padding: 7.5px;
  display: flex;
  align-items: center;
  justify-content: center;
  max-height: 100%;
}

.blur-wrapper {
  backdrop-filter: blur(5px);
  background-color: #f5f5f517;
  border-radius: 50px;
  padding: 25px;
  z-index: 2;
}

.scroll-to-arrow {
  font-size: 4rem;
}
.left {
  text-align: left;
  justify-content: start;
}

.left-btn-ctn {
  text-align: left !important;
  display: flex;
  justify-content: flex-start !important;
}

.right {

  text-align: right !important;
  justify-content: end !important;
}

.right-btn-ctn {
  text-align: right !important;
  display: flex;
  justify-content: end !important;
}

.down {
  transform: scale(-1);
}

.overview-ctn {

  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  min-height: 75vh;
  width: 100%;
  text-align: center;

  @media screen and (min-width:769px) {
      padding-inline: 12%;
  }
}

